# MyClass

./: .gitignore  Dockerfile  README.md  ROADMAP.md  config.py  main.py  pyproject.toml  scratch.py
app/: __init__.py
app/controllers/: auth_controller.py  course_controller.py  main_controller.py
app/models/: course.py  homework.py  key_moment.py  session.py  study_note.py  summary_topic.py  user.py
app/static/css/: auth.css  dashboard.css
app/templates/: auth_base.html  base.html
app/templates/auth/: login.html  register.html
app/templates/main/: add_course.html  course_detail.html  dashboard.html  edit_course.html  index.html  live_session.html  records.html  session_summary.html  settings.html
migrations/versions/: 00b8f97be3cf_.py  048e1f613f18_.py  082a1776b8c9_.py  10beb5149e0a_.py  1514dd3215cb_.py  1d886a355ac5_.py  2999d65630ad_.py  37ca8ecfc4c9_.py  3b9a1dd373f7_.py  3fbd27e7ae43_.py  64060d8c0c1e_.py  64d3af4f4dcc_.py  6cf67b844d0d_.py  7b7445668807_.py  7d6124f6b404_rename_course_fields_to_english.py  7e6aa8dd99c1_.py  8eb7e26d21b5_.py  9087f1448a22_.py  97ee744d09f5_.py  a05fdb151e72_change_course_fields.py  a9549f3fa077_.py  c0049ea1ea80_add_session_and_related_models.py  c137716da6ef_.py  ccc2f58645b4_.py  dd1ece7fb70f_.py  e825fd16c57b_.py  f5c5a1600074_.py  f9c6aa5fc95a_add_courses_table.py  fc2709de3719_.py
tests/: test_db_integrity.py  test_environment.py  test_llm_extraction.py
