[project]
name = "myclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "uvicorn>=0.42.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "python-dotenv>=1.0.1",
    "flask-login>=0.6.3",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
]
